--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "engines": {
         "vscode": "^1.38.0"
     },
+    "icon": "images/heart.png",
     "repository": {
         "url": "https://github.com/Box-Of-Hats/vscode-quick-material-icons"
     },
